# Gravital-Sound

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  seed.md
.github/workflows/: android.yml  build-outputs.yml  ci.yml  docs.yml  release.yml  terraform.yml
android/: Makefile  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/gravitaltalk/: GravitalTalkJni.kt  MainActivity.kt  PttViewModel.kt
android/app/src/main/res/layout/: activity_main.xml  activity_pairing.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/: libs.versions.toml
crates/gravital-sound/: Cargo.toml
crates/gravital-sound-cli/: Cargo.toml
crates/gravital-sound-cli/src/: main.rs
crates/gravital-sound-codec/: Cargo.toml
crates/gravital-sound-codec/src/: error.rs  lib.rs
crates/gravital-sound-core/: Cargo.toml
crates/gravital-sound-core/src/: constants.rs  error.rs  header.rs  lib.rs  message.rs  session.rs
crates/gravital-sound-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/gravital-sound-ffi/include/: gravital_sound.h
crates/gravital-sound-ffi/src/: lib.rs
crates/gravital-sound-ffi/tests/: c_smoke.c
crates/gravital-sound-io/: Cargo.toml
crates/gravital-sound-io/src/: capture.rs  devices.rs  error.rs  lib.rs  resampler.rs
crates/gravital-sound-metrics/: Cargo.toml
crates/gravital-sound-metrics/src/: jitter.rs  lib.rs  loss.rs  rtt.rs  snapshot.rs
crates/gravital-sound-relay/: Cargo.toml  Dockerfile  docker-compose.yml  relay.example.toml
crates/gravital-sound-relay/src/: lib.rs  main.rs  metrics.rs  router.rs  udp.rs  ws.rs
crates/gravital-sound-transport/: Cargo.toml
crates/gravital-sound-transport/src/: error.rs  jitter_buffer.rs  lib.rs  session.rs  udp.rs
crates/gravital-sound/benches/: checksum.rs  encode_decode.rs  opus_encode.rs
crates/gravital-sound/examples/: loopback.rs  mic_to_speaker.rs  receiver.rs  relay_server.rs  sender.rs  voip_peer.rs
crates/gravital-sound/src/: codec_session.rs  lib.rs
crates/gravital-sound/tests/: handshake_flow.rs  opus_roundtrip.rs  session_lifecycle.rs
crates/gravital-talk/: Cargo.toml
crates/gravital-talk-cli/: Cargo.toml
crates/gravital-talk-cli/src/: main.rs
crates/gravital-talk-codec/: Cargo.toml
crates/gravital-talk-codec/src/: lib.rs  negotiation.rs  opus.rs  pcm.rs
crates/gravital-talk-core/: Cargo.toml
crates/gravital-talk-core/src/: checksum.rs  floor.rs  fragment.rs  header.rs  identity.rs  lib.rs  message.rs  packet.rs
crates/gravital-talk-core/tests/: prop_decode.rs
crates/gravital-talk-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/gravital-talk-ffi/include/: gravital_sound.h  gravital_talk.h
crates/gravital-talk-ffi/src/: jni_bridge.rs  lib.rs
crates/gravital-talk-ffi/tests/: c_smoke.c
crates/gravital-talk-io/: Cargo.toml
crates/gravital-talk-io/src/: capture.rs  lib.rs  playback.rs
crates/gravital-talk-metrics/: Cargo.toml
crates/gravital-talk-metrics/src/: counters.rs  loss.rs  quality.rs
crates/gravital-talk-relay/: Cargo.toml  Dockerfile  docker-compose.yml  prometheus.yml  relay.example.toml
crates/gravital-talk-relay/src/: config.rs  lib.rs  main.rs  observability.rs  router.rs  udp.rs  ws.rs
crates/gravital-talk-transport/: Cargo.toml
crates/gravital-talk-transport/src/: congestion.rs  error.rs  fec.rs  lib.rs  session.rs  traits.rs
crates/gravital-talk-transport/tests/: prop_fec.rs
crates/gravital-talk/benches/: checksum.rs  encode_decode.rs  opus_encode.rs
crates/gravital-talk/examples/: loopback.rs  mic_to_speaker.rs  receiver.rs  relay_server.rs  sender.rs  voip_peer.rs
crates/gravital-talk/src/: codec_session.rs  lib.rs
crates/gravital-talk/tests/: handshake_flow.rs  net_sim.rs  opus_roundtrip.rs  ptt_floor_control.rs  session_lifecycle.rs  stress.rs
docs/: audio-io.md  benchmarks.md  codecs.md  overview.md  packet-format.md  pairing.md  portability.md  protocol-spec.md  security.md  session-model.md  transport.md
docs/adr/: 001-rust-core-with-c-ffi.md  002-udp-first-transport.md  003-24-byte-header.md  004-opus-as-default-codec.md  005-no-std-core.md  006-opus-codec.md  007-cpal-audio-io.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_floor_payload.rs  fuzz_message_type.rs  fuzz_packet_parse.rs
infra/: README.md
infra/cloud-init/: raspberry-pi.yml
infra/grafana/: README.md
infra/grafana/dashboards/: gravital-fleet-overview.json
infra/helm/gravital-sound-relay/: Chart.yaml  README.md  values.yaml
infra/helm/gravital-sound-relay/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
infra/helm/gravital-talk-relay/: Chart.yaml  README.md  values.yaml
infra/helm/gravital-talk-relay/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
infra/terraform/examples/self-hosted-hetzner/: main.tf
infra/terraform/examples/single-region-aws/: main.tf
infra/terraform/modules/edge-node/: edge_user_data.sh.tftpl  main.tf
infra/terraform/modules/relay-aws/: README.md  main.tf  outputs.tf  user_data.sh.tftpl  variables.tf
infra/terraform/modules/relay-digitalocean/: main.tf
infra/terraform/modules/relay-hetzner/: main.tf
outputs/: .gitignore  README.md
outputs/android/debug/: LATEST.txt
outputs/linux/x86_64/: LATEST.txt  gs-v0.1.0-alpha.1-9ce7bb5-linux-x86_64
scripts/: verify_wav.py
sdks/python/: Cargo.toml  README.md  pyproject.toml
sdks/python/gravital_sound/: __init__.py
sdks/python/gravital_talk/: __init__.py
sdks/python/src/: lib.rs
sdks/python/tests/: test_session.py
sdks/web/: Cargo.toml  README.md  package.json
sdks/web/examples/browser-demo/: index.html
sdks/web/js/: index.ts  websocket-transport.ts
sdks/web/src/: lib.rs
