[package]
name         = "gravital-sound-ffi"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "Gravital Sound — FFI C estable (cbindgen, cdylib, staticlib)."
readme       = "../../README.md"

[lib]
name = "gravital_sound_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
gravital-sound          = { workspace = true }
tokio                   = { workspace = true, features = ["rt-multi-thread", "net", "time", "sync", "macros"] }

[build-dependencies]
cbindgen = { workspace = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
