[package]
name         = "gravital-talk-codec"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "Gravital Talk — codecs (PCM passthrough + Opus)."
readme       = "../../README.md"

[lib]
name = "gravital_talk_codec"
path = "src/lib.rs"

[features]
default = ["opus"]
opus    = ["dep:audiopus"]

[dependencies]
gravital-talk-core = { workspace = true, default-features = false, features = ["alloc", "std"] }
thiserror           = { workspace = true }
audiopus            = { version = "0.2", optional = true }

[dev-dependencies]
proptest = { workspace = true }
hound    = { workspace = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
