[package]
name         = "gravital-sound-python"
version      = "0.1.0-alpha.1"
edition      = "2021"
rust-version = "1.78"
authors      = ["Angel Nereira <angelnereira15@gmail.com>"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/angelnereira/gravital-sound"
description  = "Gravital Sound — PyO3 bindings."

[lib]
name = "_gravital_sound"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
gravital-sound = { path = "../../crates/gravital-sound" }
pyo3           = { version = "0.22", features = ["extension-module", "abi3-py39"] }
tokio          = { version = "1.40", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
once_cell      = "1.19"

[workspace]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
