[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "gravital-talk"
version = "0.1.0a1"
description = "Gravital Talk — Python bindings para el protocolo de audio en tiempo real."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Angel Nereira", email = "angelnereira15@gmail.com" },
]
keywords = ["audio", "realtime", "protocol", "udp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://gravitaltalk.dev"
Repository = "https://github.com/angelnereira/gravital-talk"

[tool.maturin]
module-name = "gravital_talk._gravital_talk"
python-source = "."
features = ["pyo3/extension-module"]
