[package]
name         = "gravital-talk-web"
version      = "0.1.0-alpha.1"
edition      = "2021"
rust-version = "1.78"
authors      = ["Angel Nereira <angelnereira15@gmail.com>"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/angelnereira/gravital-talk"
description  = "Gravital Talk — wasm-bindgen bindings para navegadores."

[lib]
name       = "gravital_talk_web"
crate-type = ["cdylib", "rlib"]
path       = "src/lib.rs"

[dependencies]
gravital-talk-core = { path = "../../crates/gravital-talk-core", default-features = false, features = ["alloc"] }
wasm-bindgen        = "0.2"
wasm-bindgen-futures = "0.4"
js-sys              = "0.3"
serde               = { version = "1", features = ["derive"] }
serde-wasm-bindgen  = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "BinaryType",
    "Event",
    "MessageEvent",
    "Blob",
    "ErrorEvent",
    "CloseEvent",
    "WebSocket",
    "console",
]

[workspace]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
